# genFFT

./: CMakeLists.txt  README.txt  license.txt
genFFT/: FFTComplex.h  FFTDecl.h  FFTDouble.h  FFTFloat.h  FFTLevel.h  FFTReal.h  FFTUtil.h  fft.h
include/genFFT/: FFTAlloc.h  FFTBackend.h  FFTDIT.h  FFTDecl.h  FFTFloat.h  FFTLevel.h  FFTReal.h  FFTTwiddle.h  FFTTypes.h  FFTUtil.h  fft.h  fft_dispatch.h
include/genFFT/generic/: fft_dit_generic.h  fft_dit_impl_generic.inl  fft_impl_generic.h
include/genFFT/x86/: fft_dit_impl_x86.inl  fft_double_impl_x86.inl  fft_float_impl_x86.inl  fft_impl_x86.inl  fft_x86_dispatch.h  fft_x86_native.h  fft_x86_preproc.h  fft_x86_utils.h  x86_features.h
src/: CMakeLists.txt  dispatch_helper.h  fft_generic.cpp  fft_get_impl_proto.inl  fft_x86_avx.cpp  fft_x86_avx2.cpp  fft_x86_avx_fma.cpp  fft_x86_dispatch.cpp  fft_x86_sse.cpp  fft_x86_sse2.cpp  fft_x86_sse3.cpp  fft_x86_sse41.cpp  x86_features.cpp  x86_features.h
test/: CMakeLists.txt  fft_bench.cpp  fft_ref_impl.h  fft_test_impl.h  reference.h  test_dispatch.cpp  test_dit.cpp  test_fft.cpp  test_main.cpp  test_real_fft.cpp  test_reference.cpp  test_util.h  test_x86.cpp
